--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "homepage": "https://github.com/mrinalini-m/data_structures_and_algorithms#readme",
   "devDependencies": {
-    "jest": "^25.1.0"
-  }
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "babel-jest": "^25.3.0",
+    "jest": "^25.3.0"
+  },
+  "dependencies": {}
 }
