--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "data_structures_and_algorithms",
+  "name": "algorithms",
   "version": "1.0.0",
-  "description": "Everything related to data structures and algorithms that I've coded.",
-  "main": "./data_structures/modules/index.js",
-  "module": "./data_structures/modules/index.js",
+  "description": "Everything related to algorithms, toy problems.",
   "scripts": {
     "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mrinalini-m/data_structures_and_algorithms.git"
+    "url": "git+https://github.com/mrinalini-m/algorithms.git"
   },
   "author": "Mrinalini 'Sam' Manandhar",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mrinalini-m/data_structures_and_algorithms/issues"
+    "url": "https://github.com/mrinalini-m/algorithms/issues"
   },
-  "homepage": "https://github.com/mrinalini-m/data_structures_and_algorithms#readme",
+  "homepage": "https://github.com/mrinalini-m/algorithms#readme",
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "babel-jest": "^25.3.0",
     "jest": "^25.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "data_structures": "git+https://github.com/mrinalini-m/data_structures.git"
+  }
 }
